modified:   .github/api-spec.json 	modified:   client/app/dashboard/store-manager/assets/page.tsx 	modified:   client/app/dashboard/store-manager/page.tsx 	modified:   client/app/globals.css 	modified:   client/components/dashboard/pie-chart-donut.tsx 	modified:   client/lib/auth.ts 	modified:   server/.env.example 	modified:   server/package-lock.json 	modified:   server/package.json 	modified:   server/src/app.controller.ts 	modified:   server/src/app.module.ts 	modified:   server/src/auth/auth.module.ts 	new file:   server/src/auth/jwt.strategy.ts 	new file:   server/src/common/guards/jwt-auth.guard.ts
